--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -32,7 +35,7 @@
         <br><br>
         <h1 class="header center light-text text-light">Elizabeth Fox</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A Full Stack Web Developer</h5>
+          <h5 class="header col s12 light">Full Stack Web Developer</h5>
         </div>
         <br><br>
 
@@ -48,7 +51,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
-          <p class="center-align light" id="aboutMe">I'm a Georgia State University Alum with B.S. in Computer Information Systems. I have a passion for problem solving and  synthesizing ideas into practical web applications</p>
+          <p class="center-align light" id="aboutMe">I'm a Georgia State University Alum with a B.S. in Computer Information Systems. I have a passion for problem solving and  synthesizing ideas into practical web applications</p>
         </div>
       </div>
 
@@ -75,7 +78,9 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">local_dining</i></h2>
+            <a href="https://mariamschaudry.github.io/Project-1/">
+              <h2 class="center green-text"><i class="material-icons">local_dining</i></h2>
+            </a>
             <h5 class="center">The Green Plate</h5>
 
             <p class="light">Users will be able to select ingredients of their choice in order to generate recipes that will include the chosen ingredients. A store locator is included to search for a users preferred grocery store to purchase any additional ingredients.</p>
@@ -84,16 +89,20 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">gif</i></h2>
+            <a href="https://elizabethtfox.github.io/Animal-Button/">
+              <h2 class="center green-text"><i class="material-icons">gif</i></h2>
+            </a>
             <h5 class="center">Giftastic</h5>
 
-            <p class="light">A just-for-fun dynamic web page that populates with gifs of your choice. Gets crazy and just have fun!</p>
+            <p class="light">A just-for-fun dynamic web page that populates with gifs of your choice. Get crazy and just have fun!</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">local_grocery_store</i></h2>
+            <a href="https://gtcbc-project-2.herokuapp.com/">
+              <h2 class="center green-text"><i class="material-icons">local_grocery_store</i></h2>
+            </a>
             <h5 class="center">Olive & Thyme</h5>
 
             <p class="light">Users will be able to enter and save their favorite recipes in our "recipe box"-styled app! A shopping list is included that will allow users to add items to a list that they can take with them while they are shopping for ingredients needed for recipes.</p>
@@ -137,20 +146,31 @@
   <footer class="page-footer deep-purple lighten-3">
     <div class="container">
       <div class="row">
-        <div class="col s12">
-          <h5 class="white-text">Let's Connect!</h5>
-          <ul class="socail-links">
-            <li>
-              <a class="waves-effect waves-light btn-floating social github">
-                <i class="fa fa-github"></i> Sign in with github</a>
-            </li>
-            <li>
-              <a href="github.com"></a>
-            </li>
-          </ul>
+        <h5 class="white-text">Let's Connect!</h5>
+      </div>
+        <div class="row">
+          <div class="col s2">
+            <ul class="social-links">
+              <li>
+                <a href="https://www.github.com/elizabethtfox" target="_blank" class="btn btn-block btn-social btn-github">
+                  <span class="fa fa-github"></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col s2">
+              <ul class="social-links">
+                <li>
+                  <a href="https://www.linkedin.com/in/etfox/" target="_blank" class="btn btn-block btn-social btn-linkedin">
+                    <span class="fa fa-linkedin"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
   </footer>
 
