--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -15,19 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Elizabeth Fox</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+  <nav class="white" role="navigation"></nav>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -134,22 +122,36 @@
           <h5 class="center black-text">Javascript</h5>
         </div>
         <div class="col s12 m3">
-          <h5 class="center black-text">React</h5>
+          <h5 class="center black-text">React.js</h5>
         </div>
         <div class="col s12 m3">
-          <h5 class="center black-text">Express</h5>
+          <h5 class="center black-text">Express.js</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m3">
+          <h5 class="center black-text">MongoDB</h5>
+        </div>
+        <div class="col s12 m3">
+          <h5 class="center black-text">HTML</h5>
+        </div>
+        <div class="col s12 m3">
+          <h5 class="center black-text">API Creation</h5>
+        </div>
+        <div class="col s12 m3">
+          <h5 class="center black-text">Node.js</h5>
         </div>
       </div>
     </div>
   </div>
 
-  <footer class="page-footer deep-purple lighten-3">
+  <footer class="page-footer blue-grey lighten-3">
     <div class="container">
       <div class="row">
-        <h5 class="white-text">Let's Connect!</h5>
+        <h2 class="white-text">Let's Connect!</h2>
       </div>
         <div class="row">
-          <div class="col s2">
+          <div class="col s6">
             <ul class="social-links">
               <li>
                 <a href="https://www.github.com/elizabethtfox" target="_blank" class="btn btn-block btn-social btn-github">
@@ -159,7 +161,7 @@
             </ul>
           </div>
           <div class="row">
-            <div class="col s2">
+            <div class="col s6">
               <ul class="social-links">
                 <li>
                   <a href="https://www.linkedin.com/in/etfox/" target="_blank" class="btn btn-block btn-social btn-linkedin">
