--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -136,7 +136,7 @@
           <h5 class="center black-text">HTML</h5>
         </div>
         <div class="col s12 m3">
-          <h5 class="center black-text">API Creation</h5>
+          <h5 class="center black-text">API Development</h5>
         </div>
         <div class="col s12 m3">
           <h5 class="center black-text">Node.js</h5>
