update sentence structure

--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -39,7 +39,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
-          <p class="center-align light" id="aboutMe">I'm a Georgia State University Alum with a B.S. in Computer Information Systems. I have a passion for problem solving and  synthesizing ideas into practical web applications</p>
+          <p class="center-align light" id="aboutMe">I'm a Georgia State University Alum with a B.S. in Computer Information Systems. I have a passion for problem solving and  synthesizing ideas into practical web applications.</p>
         </div>
       </div>
 
